logs/stock.log.2026-02-21
2026-02-21 11:49:25 [    INFO] stock | PostgreSQL 连接池创建成功
2026-02-21 11:50:13 [    INFO] stock | PostgreSQL 连接池创建成功
2026-02-21 14:30:11 [   ERROR] stock | 连接池创建失败
Traceback (most recent call last):
  File "D:\pyProject\pythonProject\09-stock_analysis\stock_predict\utils\db_conn.py", line 67, in __init__
    self._pool = pool.SimpleConnectionPool(minconn, maxconn, **self._params)
                 ~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\Program Files\Python313\Lib\site-packages\psycopg2\pool.py", line 59, in __init__
    self._connect()
    ~~~~~~~~~~~~~^^
  File "D:\Program Files\Python313\Lib\site-packages\psycopg2\pool.py", line 63, in _connect
    conn = psycopg2.connect(*self._args, **self._kwargs)
  File "D:\Program Files\Python313\Lib\site-packages\psycopg2\__init__.py", line 135, in connect
    conn = _connect(dsn, connection_factory=connection_factory, **kwasync)
psycopg2.OperationalError: connection to server at "localhost" (::1), port 5432 failed: fe_sendauth: no password supplied

2026-02-21 15:03:57 [   ERROR] stock | 连接池创建失败
Traceback (most recent call last):
  File "D:\pyProject\pythonProject\09-stock_analysis\stock_predict\utils\db_conn.py", line 114, in __init__
    self._pool = pool.SimpleConnectionPool(minconn, maxconn, **self._params)
                 ~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\Program Files\Python313\Lib\site-packages\psycopg2\pool.py", line 59, in __init__
    self._connect()
    ~~~~~~~~~~~~~^^
  File "D:\Program Files\Python313\Lib\site-packages\psycopg2\pool.py", line 63, in _connect
    conn = psycopg2.connect(*self._args, **self._kwargs)
  File "D:\Program Files\Python313\Lib\site-packages\psycopg2\__init__.py", line 135, in connect
    conn = _connect(dsn, connection_factory=connection_factory, **kwasync)
psycopg2.OperationalError: connection to server at "localhost" (::1), port 5432 failed: fe_sendauth: no password supplied

2026-02-21 15:37:45 [   ERROR] stock | 连接池创建失败
Traceback (most recent call last):
  File "D:\pyProject\pythonProject\09-stock_analysis\stock_predict\utils\db_conn.py", line 114, in __init__
    self._pool = pool.SimpleConnectionPool(minconn, maxconn, **self._params)
                 ~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\Envs\stock_predict\Lib\site-packages\psycopg2\pool.py", line 59, in __init__
    self._connect()
    ~~~~~~~~~~~~~^^
  File "D:\Envs\stock_predict\Lib\site-packages\psycopg2\pool.py", line 63, in _connect
    conn = psycopg2.connect(*self._args, **self._kwargs)
  File "D:\Envs\stock_predict\Lib\site-packages\psycopg2\__init__.py", line 135, in connect
    conn = _connect(dsn, connection_factory=connection_factory, **kwasync)
psycopg2.OperationalError: connection to server at "localhost" (::1), port 5432 failed: fe_sendauth: no password supplied

2026-02-21 15:38:47 [    INFO] stock | PostgreSQL 连接池创建成功
2026-02-21 15:43:13 [    INFO] stock | PostgreSQL 连接池创建成功
2026-02-21 17:45:45 [    INFO] stock | PostgreSQL 连接池创建成功
2026-02-21 17:46:14 [    INFO] stock | 开始批量预测 5 支股票
2026-02-21 17:46:14 [ WARNING] stock | 未提供模型或PyTorch未安装，使用随机预测数据
2026-02-21 17:46:14 [ WARNING] stock | 无法获取股票信息: 000003
2026-02-21 17:46:14 [ WARNING] stock | 无法获取股票信息: 000005
2026-02-21 17:46:14 [    INFO] stock | 批量预测完成，成功处理 3 支股票
2026-02-21 17:46:14 [    INFO] stock | 生成 2 个推荐
2026-02-21 17:46:14 [    INFO] stock | 推荐结果已保存到数据库，日期: 2024-01-01
2026-02-21 17:46:14 [    INFO] stock | 表 recommendations 创建/已存在
2026-02-21 17:46:14 [    INFO] stock | 推荐结果表创建成功
2026-02-21 18:07:12 [    INFO] stock | PostgreSQL 连接池创建成功
2026-02-21 18:07:37 [    INFO] stock | 正在启动股票预测API服务...
2026-02-21 18:07:37 [    INFO] stock | 推荐系统初始化完成
2026-02-21 18:07:37 [    INFO] stock | API服务启动完成，监听 0.0.0.0:8000
2026-02-21 18:07:44 [   ERROR] stock | 未处理的异常: unexpected char '?' at 3860
Traceback (most recent call last):
  File "D:\Program Files\Python313\Lib\site-packages\starlette\middleware\errors.py", line 164, in __call__
    await self.app(scope, receive, _send)
  File "D:\Program Files\Python313\Lib\site-packages\starlette\middleware\cors.py", line 87, in __call__
    await self.app(scope, receive, send)
  File "D:\Program Files\Python313\Lib\site-packages\starlette\middleware\exceptions.py", line 63, in __call__
    await wrap_app_handling_exceptions(self.app, conn)(scope, receive, send)
  File "D:\Program Files\Python313\Lib\site-packages\starlette\_exception_handler.py", line 53, in wrapped_app
    raise exc
  File "D:\Program Files\Python313\Lib\site-packages\starlette\_exception_handler.py", line 42, in wrapped_app
    await app(scope, receive, sender)
  File "D:\Program Files\Python313\Lib\site-packages\fastapi\middleware\asyncexitstack.py", line 18, in __call__
    await self.app(scope, receive, send)
  File "D:\Program Files\Python313\Lib\site-packages\starlette\routing.py", line 716, in __call__
    await self.middleware_stack(scope, receive, send)
  File "D:\Program Files\Python313\Lib\site-packages\starlette\routing.py", line 736, in app
    await route.handle(scope, receive, send)
  File "D:\Program Files\Python313\Lib\site-packages\starlette\routing.py", line 290, in handle
    await self.app(scope, receive, send)
  File "D:\Program Files\Python313\Lib\site-packages\fastapi\routing.py", line 119, in app
    await wrap_app_handling_exceptions(app, request)(scope, receive, send)
  File "D:\Program Files\Python313\Lib\site-packages\starlette\_exception_handler.py", line 53, in wrapped_app
    raise exc
  File "D:\Program Files\Python313\Lib\site-packages\starlette\_exception_handler.py", line 42, in wrapped_app
    await app(scope, receive, sender)
  File "D:\Program Files\Python313\Lib\site-packages\fastapi\routing.py", line 105, in app
    response = await f(request)
               ^^^^^^^^^^^^^^^^
  File "D:\Program Files\Python313\Lib\site-packages\fastapi\routing.py", line 424, in app
    raw_response = await run_endpoint_function(
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ...<3 lines>...
    )
    ^
  File "D:\Program Files\Python313\Lib\site-packages\fastapi\routing.py", line 312, in run_endpoint_function
    return await dependant.call(**values)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\pyProject\pythonProject\09-stock_analysis\stock_predict\app\main.py", line 131, in root
    return templates.TemplateResponse("index.html", {"request": request})
           ~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\Program Files\Python313\Lib\site-packages\starlette\templating.py", line 209, in TemplateResponse
    template = self.get_template(name)
  File "D:\Program Files\Python313\Lib\site-packages\starlette\templating.py", line 132, in get_template
    return self.env.get_template(name)
           ~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "D:\Program Files\Python313\Lib\site-packages\jinja2\environment.py", line 1016, in get_template
    return self._load_template(name, globals)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "D:\Program Files\Python313\Lib\site-packages\jinja2\environment.py", line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
  File "D:\Program Files\Python313\Lib\site-packages\jinja2\loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
  File "D:\Program Files\Python313\Lib\site-packages\jinja2\environment.py", line 771, in compile
    self.handle_exception(source=source_hint)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^
  File "D:\Program Files\Python313\Lib\site-packages\jinja2\environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "D:\pyProject\pythonProject\09-stock_analysis\stock_predict\frontend\templates\index.html", line 78, in template
    {{ modelAvailable ? '已加载' : '未加载' }}
    
jinja2.exceptions.TemplateSyntaxError: unexpected char '?' at 3860
2026-02-21 18:10:25 [    INFO] stock | PostgreSQL 连接池创建成功
2026-02-21 18:10:28 [    INFO] stock | 正在启动股票预测API服务...
2026-02-21 18:10:28 [    INFO] stock | 推荐系统初始化完成
2026-02-21 18:10:28 [    INFO] stock | API服务启动完成，监听 0.0.0.0:8000
2026-02-21 18:10:41 [    INFO] stock | 获取推荐: top_n=3, max_risk=0.5, min_confidence=0.6
2026-02-21 18:10:41 [    INFO] stock | 开始批量预测 20 支股票
2026-02-21 18:10:41 [ WARNING] stock | 未提供模型或PyTorch未安装，使用随机预测数据
2026-02-21 18:10:42 [    INFO] stock | 已处理 10 支股票，达到测试限制
2026-02-21 18:10:42 [    INFO] stock | 批量预测完成，成功处理 10 支股票
2026-02-21 18:10:42 [    INFO] stock | 生成 3 个推荐
2026-02-21 18:10:42 [    INFO] stock | 推荐结果已保存到数据库，日期: 2026-02-21
2026-02-21 18:10:44 [    INFO] stock | 预测请求: 000001
2026-02-21 18:10:44 [    INFO] stock | 开始批量预测 1 支股票
2026-02-21 18:10:44 [ WARNING] stock | 未提供模型或PyTorch未安装，使用随机预测数据
2026-02-21 18:10:44 [    INFO] stock | 批量预测完成，成功处理 1 支股票
2026-02-21 18:10:46 [    INFO] stock | 获取股票数据: 000001, limit=5
